# -ENSATT-Smart-system-based-building-monitoring

arduino-node/: Gas_sensor.cpp  Gas_sensor.h  LED_array.cpp  LED_array.h  arduino-node.ino  arduino-node.ino.bak  buzzer_sensor.cpp  buzzer_sensor.h  flame_sensor.cpp  flame_sensor.h  humidity_sensor.cpp  humidity_sensor.h  light_sensor.cpp  light_sensor.h  people_counting.cpp  people_counting.h  sound_sensor.cpp  sound_sensor.h  vibration_sensor.cpp  vibration_sensor.h
ble-mesh-reader/: Cargo.toml
ble-mesh-reader/src/: main.rs
src/: CO2_sensor.ino  light_sensor.ino  sound_sensor.ino  vibration_sensor.ino
