[package]
name = "ble-mesh-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = "1.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
